--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vidasana",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://raarrieta.github.io/VidaSaludable/",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -41,5 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://raarrieta.github.io/VidaSaludable/"
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
